<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:id="@+id/toolbar">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_text1"
        android:gravity="center"
        android:layout_marginVertical="@dimen/margin1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/imageBoton"
            android:layout_height="@dimen/imageBoton"
            android:src="@drawable/papas"
            android:id="@+id/combo1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/combo1"
            android:textSize="@dimen/text"
            android:layout_marginStart="@dimen/margin1"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/imageBoton"
            android:layout_height="@dimen/imageBoton"
            android:src="@drawable/ensalada"
            android:id="@+id/combo2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/combo2"
            android:textSize="@dimen/text"
            android:layout_marginStart="@dimen/margin1"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/imageBoton"
            android:layout_height="@dimen/imageBoton"
            android:src="@drawable/lazagna"
            android:id="@+id/combo3"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/combo3"
            android:textSize="@dimen/text"
            android:layout_marginStart="@dimen/margin1"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/imageBoton"
            android:layout_height="@dimen/imageBoton"
            android:src="@drawable/pizza"
            android:id="@+id/combo4"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/combo4"
            android:textSize="@dimen/text"
            android:layout_marginStart="@dimen/margin1"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/imageBoton"
            android:layout_height="@dimen/imageBoton"
            android:src="@drawable/pollo"
            android:id="@+id/combo5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/combo5"
            android:textSize="@dimen/text"
            android:layout_marginStart="@dimen/margin1"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ver"
        android:textAlignment="center"/>
</LinearLayout>